assets/scss/_desktop-sub-navigation.scss
#sub-navigation {
  position: relative;
  height: 80px;
  background: $colorGrayscale-black;

  .container {
    &:before,
    &:after {
      content: " "; // 1
      display: table; // 2
    }
    &:after {
      clear: both;
    }
  }

  &.out {
    position: fixed;
    width: 100%;
    top: 0px;
    z-index: 1000;

    .sub-nav-logo {
      background: url("/assets/img/cru-logo-white.png") no-repeat;
      background-size: contain;
      width: 87px;
      height: 54px;
      float: left;
      margin-top: 11px;
      display: block;
    }

    .breadcrumbs {
      margin-left: 25px;
    }

    .sub-nav {
      margin-left: 112px;
    }

    .sub-nav-search-icon {
      float: right;
      display: block;
      background: url(/assets/img/desktop-search.png) no-repeat right 14px center;
      background-size: 20px 20px;
      height: 20px;
      width: 100%;
      position: relative;
      bottom: 17px;

      &:before,
      &:after {
        content: " "; // 1
        display: table; // 2
      }
      &:after {
        clear: both;
      }
    }
  }

  .sub-nav-logo {
    display: none;
  }

  &:before,
  &:after {
    content: " "; // 1
    display: table; // 2
  }
  &:after {
    clear: both;
  }

  .breadcrumbs {
    float: left;
    margin: 10px 0 0 0;
    padding: 0;

    li {
      display: inline-block;

      a {
        padding: 7px 14px;
        color: $colorCru-white;
        font-size: 20px;
        font-weight: bold;
        text-transform: uppercase;

        &:hover {
          color: $colorCru-gold;
          text-decoration: none;
        }
      }

      &::after {
        content: "";
        background: url("/assets/img/sub-nav-caret.png") no-repeat;
        background-size: 5px 8px;
        display: inline-block;
        width: 5px;
        height: 10px;
      }

      &:first-child {
        a {
          padding-left: 0 !important;
        }
      }

      &:last-child::after {
        background: none;
      }
    }
  }

  .sub-nav {
    float: left;
    margin: 0;
    padding: 0;
    position: absolute;
    bottom: 10px;

    li {
      display: inline-block;
      padding-left: 10px;
      padding-right: 10px;

      &:first-child {
        padding-left: 0;
      }

      a {
        padding: 5px 0 12px;
        color: $colorCru-white;
        font-size: 14px;
        font-weight: 600;
        text-transform: uppercase;

        &:hover {
          color: $colorCru-gold;
          text-decoration: none;
        }

        &.active {
          border-bottom: 3px solid $colorCru-gold;
        }
      }
    }
  }
}

